--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@nuxt/typescript-build": "^0.6.6",
-    "@nuxt/typescript-runtime": "^0.4.8",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/google-analytics": "^2.3.0",
-    "less-loader": "^6.1.0",
     "nuxt": "^2.12.2",
-    "push-dir": "^0.4.1",
     "vue-fragment": "y-nk/vue-fragment#master",
     "warpspeed": "^1.1.1"
+  },
+  "devDependencies": {
+    "@nuxt/typescript-build": "^0.6.6",
+    "@nuxt/typescript-runtime": "^0.4.9",
+    "less-loader": "^6.1.0",
+    "push-dir": "^0.4.1"
   }
 }
