--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
   "name": "kyesmith.me",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Kye Smith's development endeavours",
   "author": "Kye Smith",
-  "private": true,
+  "keywords": [
+    "gatsby",
+    "react",
+    "kye smith"
+  ],
   "scripts": {
-    "postinstall": "cd ./node_modules/vue-fragment && npm i",
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "deploy": "nuxt generate && push-dir --dir=dist --branch=gh-pages --cleanup"
+    "dev": "gatsby develop -H 0.0.0.0 -p 8000",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "deploy": "gatsby clean && gatsby build && push-dir --dir=public --branch=gh-pages --cleanup"
   },
-  "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.1",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/google-analytics": "^2.3.0",
-    "nuxt": "^2.12.2",
-    "vue-fragment": "y-nk/vue-fragment#master",
-    "warpspeed": "^2.0.5"
-  },
+  "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
-    "@nuxt/typescript-build": "^1.0.3",
-    "@nuxt/typescript-runtime": "^0.4.10",
-    "less-loader": "^6.1.0",
-    "push-dir": "^0.4.1"
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@styled-icons/bootstrap": "^10.25.0",
+    "@styled-icons/simple-icons": "^10.27.0",
+    "@types/styled-components": "^5.1.7",
+    "gatsby": "^2.32.3",
+    "gatsby-plugin-google-analytics": "^2.11.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-mdx": "^1.10.0",
+    "gatsby-plugin-sass": "^2.8.0",
+    "gatsby-plugin-styled-components": "^3.10.0",
+    "node-sass": "^4.0.0",
+    "push-dir": "^0.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.1.3",
+    "warpspeed": "^2.0.5"
   }
 }
