--- a/package.json
+++ b/package.json
@@ -20,21 +20,24 @@
   "devDependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@styled-icons/bootstrap": "^10.25.0",
-    "@styled-icons/simple-icons": "^10.27.0",
+    "@styled-icons/bootstrap": "^10.29.0",
+    "@styled-icons/simple-icons": "^10.29.0",
+    "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.7",
-    "gatsby": "^2.32.3",
+    "gatsby": "^2.32.9",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-mdx": "^1.10.0",
+    "gatsby-plugin-mdx": "^1.10.1",
+    "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-styled-components": "^3.10.0",
     "node-sass": "^4.0.0",
     "push-dir": "^0.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.3",
+    "typescript": "^4.2.3",
     "warpspeed": "^2.0.5"
   }
 }
