--- a/package.json
+++ b/package.json
@@ -4,37 +4,33 @@
   "description": "Kye Smith's development endeavours",
   "author": "Kye Smith",
   "keywords": [
-    "gatsby",
     "react",
+    "nextjs",
+    "typescript",
+    "portfolio",
     "kye smith"
   ],
   "scripts": {
-    "dev": "gatsby develop -H 0.0.0.0 -p 8000",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "deploy": "gatsby clean && gatsby build && push-dir --dir=public --branch=gh-pages --cleanup"
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^11.0.1",
     "@styled-icons/bootstrap": "^10.29.0",
     "@styled-icons/simple-icons": "^10.29.0",
-    "@types/react-helmet": "^6.1.1",
+    "@types/node": "^16.4.1",
+    "@types/react": "^17.0.15",
     "@types/styled-components": "^5.1.10",
-    "gatsby": "^3.7.1",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-mdx": "^2.7.1",
-    "gatsby-plugin-react-helmet": "^4.7.1",
-    "gatsby-plugin-sass": "^4.7.1",
-    "gatsby-plugin-styled-components": "^4.7.1",
-    "node-sass": "^6.0.0",
+    "babel-plugin-styled-components": "^1.13.2",
+    "next": "^11.0.1",
     "push-dir": "^0.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "sass": "^1.36.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.2",
     "warpspeed": "^2.0.5"
