--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,17 +1,22 @@
 name: Deploy to gh-pages
+
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  workflow_dispatch:
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Install
         run: yarn install
+
       - name: Build
         run: yarn build
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.2
         with:
