--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
+.env.local
+
 node_modules
 dist
-.vscode
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
 .DS_Store
+.vscode/
+.idea/
