--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,12 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react",
-    "importsNotUsedAsValues": "error",
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "strict": true
   },
-  "include": ["./src"]
+  "include": ["src"]
 }
