--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,19 +15,24 @@ jobs:
       - name: Build
         run: yarn build
       - name: Upload build files as github pages artifact
-        uses: actions/upload-pages-artifact@v1.0.3
+        id: deployment
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: dist/
 
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+
     permissions:
       pages: write
       id-token: write
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
     steps:
-      - name: Deploy build artifact to github-pages environment
-        uses: actions/deploy-pages@v1.0.8
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
